# nesya

./: README.md  pyproject.toml
deepfa/: automaton.py  utils.py
deepstochlog/: logic.py  model.py  tabled_and_or_trees.py  trainer.py
nesya/caviar/: nesy.py  pure_neural.py  results.py  transformer.py
nesya/caviar/neural/: neural.py
nesya/caviar/utils/: caviar_utils.py  caviar_vision.py
nesya/driving/: fuzzy.py  train.py  vizualize.py
nesya/driving/data/: dataset.py
nesya/driving/scalability/: scalability.py  utils.py
results/: performance_results.json  results_nesy.json  results_neural.json  results_transformer.json  timing_results.json
