[tool.poetry]
name = "nesya"
version = "0.1.0"
description = ""
authors = ["anonymous <anonymous@example.com>"]
readme = "README.md"
packages = [{include = "nesya"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
nnf = "^0.4.1"
torchmetrics = "^1.6.1"
graphviz = "^0.20.3"
more-itertools = "^10.6.0"
torchvision = "^0.20.1"
flloat = "^0.3.0"
ltlf2dfa = "^1.0.2"
deepproblog = "^2.0.6"
pyparsing = "^3.2.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
requests = "^2.32.3"
rich = "^13.9.4"
opencv-python = "^4.11.0.86"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
